objects/Project__c.object
<CustomObject>
    <description>This object is used approved projects under test</description>
    <fields>
        <fullName>Configuration_Tasks_Completed__c</fullName>
        <description>Total Number of Configuration Tasks Completed</description>
        <inlineHelpText>Total Number of Configuration Tasks Completed</inlineHelpText>
        <label>Configuration Tasks Completed</label>
        <summaryFilterItems>
            <field>Configuration_Task__c.Config_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>Configuration_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Configuration_Days__c</fullName>
        <description>This is a formula field that summarizes the total days devoted to configuration.</description>
        <formula>Total_Configuration_Hours__c / 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula field that summarizes the total days devoted to configuration.</inlineHelpText>
        <label>Total Configuration Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Configuration_Hours__c</fullName>
        <description>This is a formula field that summarizes the total number of hours devoted to configuration.</description>
        <inlineHelpText>This is a formula field that summarizes the total number of hours devoted to configuration.</inlineHelpText>
        <label>Total Configuration Hours</label>
        <summarizedField>Configuration_Task__c.Hours_to_Complete__c</summarizedField>
        <summaryForeignKey>Configuration_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Validation_Days__c</fullName>
        <description>This is a formula field that summarizes the total days devoted to validation</description>
        <formula>Total_Validation_Hours__c / 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula field that summarizes the total days devoted to validation</inlineHelpText>
        <label>Total Validation Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Validation_Hours__c</fullName>
        <description>This is a formula field that summarizes the total number of hours devoted to Validation Tests</description>
        <inlineHelpText>This is a formula field that summarizes the total number of hours devoted to Validation Tests</inlineHelpText>
        <label>Total Validation Hours</label>
        <summarizedField>Validation_Test__c.Hours_to_Complete__c</summarizedField>
        <summaryForeignKey>Validation_Test__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Validation_Tests_Completed__c</fullName>
        <description>Total Number of Validation Tests Completed</description>
        <inlineHelpText>Total Number of Validation Tests Completed</inlineHelpText>
        <label>Validation Tests Completed</label>
        <summaryFilterItems>
            <field>Validation_Test__c.Validation_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>Validation_Test__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project</label>
    <nameField>
        <label>Project</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>